--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetflixPage</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
-    <link rel="shortcut icon" href="./img/logonetflix.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logonetflix.png" type="image/x-icon">
   </head>
   <body>
     <main>
       <header>
         <a href="#" class="logo"
-          ><img src="./img/logo.png" alt="logo netflix"
+          ><img src="logo.png" alt="logo netflix"
         /></a>
         <ul class="navigation">
           <li><a href="#">Home</a></li>
@@ -30,10 +30,10 @@
         </div>
       </header>
       <section class="banner">
-        <img src="./img/Fon2.jpg" alt="personaje" class="bg" />
+        <img src="Fon2.jpg" alt="personaje" class="bg" />
         <span class="sombraImg"></span>
         <div class="content">
-          <img src="./img/Fon2Letras.png" class="movieTitle" />
+          <img src="Fon2Letras.png" class="movieTitle" />
           <h4>
             <span>2022</span>
             <span><i>16+</i></span>
@@ -44,17 +44,17 @@
             Cuando un asesino se dirige a la élite de Gotham con una serie de maquinaciones sádicas, un rastro de pistas crípticas envía Batman a una investigación en los bajos fondos.
           </p>
           <div class="buttons">
-            <a href="/img/trailer.mp4" target=_blank">Play</a>
+            <a href="trailer.mp4" target=_blank">Play</a>
             <a href="#">My list</a>
           </div>
         </div>
         <a href="#" class="play" onclick="toggleVideo();">
-            <img src="./img/log.png" />Watch Trailer
+            <img src="log.png" />Watch Trailer
         </a>
       </section>
       <section class="trailer">
-        <video src="./img/trailer.mp4" controls="true"></video>
-        <img src="./img/close.png" class="close" onclick="toggleVideo();">
+        <video src="trailer.mp4" controls="true"></video>
+        <img src="close.png" class="close" onclick="toggleVideo();">
 
       </section>
     </main>
